--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -3,3 +3,5 @@ Classroom Info
 <%= @classroom.course_name %>
 <%= @classroom.semester %>
 </p>
+
+<%= render partial: "students/student", locals: {students: @students} %>
