--- a/app/views/students/_student.html.erb
+++ b/app/views/students/_student.html.erb
@@ -1,11 +1,13 @@
+<% students.each do |student|%>
 <ul>
   <li>
-    Name: <%= @student.name %>
+    Name: <%= student.name %>
   </li>
   <li>
-    Birthday: <%= @student.birthday.strftime("%m/%d/%Y")  %>
+    Birthday: <%= student.birthday.strftime("%m/%d/%Y")  %>
   </li>
   <li>
-    Hometown: <%= @student.hometown.capitalize %>
+    Hometown: <%= student.hometown.capitalize %>
   </li>
 </ul>
+<%end%>
